fixed cross close button on safari

--- a/src/components/DeleteModal.module.css
+++ b/src/components/DeleteModal.module.css
@@ -4,9 +4,7 @@
   right: 0.65rem;
   cursor: pointer;
   border-radius: 50%;
-  width: 1rem;
-  height: 1rem;
-  padding: 0.65em;
+  padding: 0.1em 0.65em;
   transition: 200ms;
 }
 
